Fixed bottom spacing

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -114,7 +114,6 @@ select {
   padding: 10px;
   background-color: #f8f7f3;
   text-align: center;
-  margin-bottom: 10px;
 }
 
 .bb {
@@ -123,7 +122,7 @@ select {
   padding: 10px;
   background-color: #f8f7f3;
   /* text-align: center; */
-  margin-bottom: 100px;
+  margin-bottom: 10px;
   width: 100%;
   float: left;
 
@@ -137,7 +136,7 @@ select {
   padding: 10px;
   background-color: #f8f7f3;
   /* text-align: center; */
-  margin-bottom: 10px;
+  margin-bottom: 100px;
   width: 100%;
   float: left;
 }
